# backend-candidate-test-assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  client.py  config.py  database.db  exceptions.py  main.py  pyproject.toml
auth/: controller.py  model.py  service.py
database/: core.py
entities/: post.py  user.py
posts/: controller.py  model.py  service.py
redis_client/: client.py  message.py
streams/: controller.py  service.py
users/: controller.py  model.py  service.py
